authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: datastore
  namespace: default
spec:
  selector:
    matchLabels:
      app: datastore
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/backend
